--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
-                <!-- Finance Category 
+                <!--  Finance Category --> 
                 <a href="finance.html" class="card-hover bg-white rounded-lg shadow-md overflow-hidden">
                     <div class="bg-gradient-to-r from-blue-500 to-blue-600 p-6 text-white">
                         <div class="flex items-center justify-between">
