search.js home2

--- a/template-calc.html
+++ b/template-calc.html
@@ -6,7 +6,7 @@
     <!-- This title is CRITICAL for SEO. Change it for each calculator. -->
     <title>Easy Mortgage Calculator - Calculate Your Monthly Payments</title>
     <meta name="description" content="Use our free mortgage calculator to estimate your monthly payments, including principal, interest, taxes, and insurance. Simple, fast, and accurate.">
-    
+    <link rel="canonical" href="https://calcdomain.com/template-calc.html"/>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -175,7 +175,7 @@
             <!-- NAVIGATION LINKS -->
             <div class="hidden md:flex items-center space-x-6">
                 <a href="search.html" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-                <a href="#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+                <a href="index.html#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
             </div>
             
             <!-- MOBILE TOGGLE -->
@@ -218,7 +218,8 @@
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="#" class="hover:text-blue-600">Financial Calculators</a> &raquo;
+                    <a href="finance.html" class="hover:text-blue-600">Financial Calculators</a> &raquo;
+                    <a href="mortgage-real-estate.html" class="hover:text-blue-600">Mortgage & Real Estate Calculators</a> &raquo;
                     <span>Mortgage Calculator</span>
                 </nav>
 
