--- a/yeast-pitch-rate.html
+++ b/yeast-pitch-rate.html
@@ -6,6 +6,7 @@
     <!-- This title is CRITICAL for SEO. -->
     <title>Yeast Pitch Rate & Starter Calculator for Homebrewing</title>
     <meta name="description" content="Professional yeast pitch rate calculator to determine required cells for ales and lagers, estimate viable cells from packs, and compute one-step starter volume.">
+    <link rel="canonical" href="http://calcdomain.com/yeast-pitch-rate.html"/>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -192,7 +193,7 @@
             <!-- NAVIGATION LINKS -->
             <div class="hidden md:flex items-center space-x-6">
                 <a href="search.html" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-                <a href="#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+                <a href="index.html#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
             </div>
             
             <!-- MOBILE TOGGLE -->
@@ -220,7 +221,7 @@
             </div>
             <div class="space-y-2">
                 <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-                <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+                <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
             </div>
         </div>
     </nav>
@@ -235,7 +236,7 @@
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="#" class="hover:text-blue-600">Lifestyle & Everyday</a> &raquo;
+                    <a href="lifestyle-everyday.html" class="hover:text-blue-600">Lifestyle & Everyday</a> &raquo;
                     <span>Yeast Pitch Rate Calculator</span>
                 </nav>
 
@@ -382,10 +383,10 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Brewing Tools</h3>
                         <ul class="space-y-3">
-                            <li><a href="#" class="text-blue-600 hover:underline">ABV (Alcohol by Volume) Calculator</a></li>
-                            <li><a href="#" class="text-blue-600 hover:underline">Hydrometer Temperature Correction</a></li>
-                            <li><a href="#" class="text-blue-600 hover:underline">Priming Sugar Calculator</a></li>
-                            <li><a href="#" class="text-blue-600 hover:underline">Strike Water Temperature Calculator</a></li>
+                            <li><a href="abv-calculator.html" class="text-blue-600 hover:underline">ABV (Alcohol by Volume) Calculator</a></li>
+                            <li><a href="hydrometer-temperature-correction.html" class="text-blue-600 hover:underline">Hydrometer Temperature Correction</a></li>
+                            <li><a href="priming-sugar-calculator-5-gallons.html" class="text-blue-600 hover:underline">Priming Sugar Calculator</a></li>
+                            <li><a href="strike-water-temperature-calculator.html" class="text-blue-600 hover:underline">Strike Water Temperature Calculator</a></li>
                         </ul>
                     </div>
                 </div>
