--- a/auto-loan-calculator.html
+++ b/auto-loan-calculator.html
@@ -26,18 +26,64 @@
         .schedule-container table { width: 100%; }
         .schedule-container th, .schedule-container td { padding: 0.5rem; text-align: right; }
         .schedule-container th { background: #f9fafb; position: sticky; top: 0; }
+        
+        /* CalcDomain Search Styles */
+        .search-highlight { background: linear-gradient(120deg, #fbbf24 0%, #f59e0b 100%); padding: 2px 4px; border-radius: 4px; font-weight: 600; color: #78350f; }
+        #search-results, #mobile-search-results { background: white; border: 1px solid #e5e7eb; border-radius: 12px; box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1); max-height: 400px; overflow-y: auto; }
+        #search-results a, #mobile-search-results a { display: block; padding: 16px; border-bottom: 1px solid #f3f4f6; transition: all 0.2s ease; text-decoration: none; }
+        #search-results a:last-child, #mobile-search-results a:last-child { border-bottom: none; }
+        #search-results a:hover, #mobile-search-results a:hover { background-color: #f8fafc; transform: translateX(4px); }
+        input[type="search"]:focus { box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1); border-color: #3b82f6; }
+        @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+        .search-results.show { animation: fadeInUp 0.3s ease-out; }
     </style>
+    <script src="search.js" defer></script>
     <script type="application/ld+json">{ "@context": "https://schema.org", "@type": "HowTo", "name": "How to Calculate Auto Loan Payments", "description": "A step-by-step guide to calculating monthly car payments, total interest, and amount financed.", "step": [ {"@type": "HowToStep", "name": "Enter Vehicle Details", "text": "Input the vehicle price or your target monthly payment, down payment, and trade-in value."}, {"@type": "HowToStep", "name": "Set Tax and Fees", "text": "Enter your local sales tax rate and any additional fees."}, {"@type": "HowToStep", "name": "Loan Terms", "text": "Input the APR and loan term."}, {"@type": "HowToStep", "name": "Review Results", "text": "The calculator displays your payment or affordable price, plus total costs and savings from extra payments."} ] }</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
     <header class="bg-white shadow-sm sticky top-0 z-50">
-        <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center"><a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a></nav>
+        <nav class="container mx-auto px-4 lg:px-6 py-4">
+            <div class="flex justify-between items-center">
+                <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+                <div class="w-full max-w-md hidden md:block mx-8">
+                    <div class="relative">
+                        <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-10 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" autocomplete="off">
+                        <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                        <div id="search-results" class="absolute top-full left-0 right-0 mt-2 z-50 hidden"></div>
+                    </div>
+                </div>
+                <div class="hidden md:flex items-center space-x-6">
+                    <a href="#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+                </div>
+                <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-md hover:bg-gray-100">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+                </button>
+            </div>
+            <div id="mobile-menu" class="md:hidden mt-4 hidden">
+                <div class="mb-4">
+                    <div class="relative">
+                        <input type="search" id="mobile-search-input" placeholder="Search calculators..." class="w-full py-3 px-4 pr-10 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                        <div id="mobile-search-results" class="absolute top-full left-0 right-0 mt-2 z-50 hidden"></div>
+                    </div>
+                </div>
+                <div class="space-y-2">
+                    <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600 rounded-md px-3">Categories</a>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <div class="container mx-auto px-4 py-8">
         <div class="flex flex-col lg:flex-row gap-8">
             <main class="w-full lg:w-2/3">
+                <nav class="text-sm mb-4 text-gray-600">
+                    <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="#" class="hover:text-blue-600">Finance</a> &raquo;
+                    <span>Auto Loan Calculator</span>
+                </nav>
+
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <h1 class="text-3xl font-bold mb-2">Auto Loan & Affordability Calculator</h1>
                     <p class="text-gray-600 mb-6">Calculate your car payment from a vehicle price, or work backwards from a monthly payment to see how much car you can afford.</p>
@@ -113,14 +159,12 @@
                 <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
                     <h2>An Expert Guide to Understanding Your Auto Loan</h2>
                     <p>Buying a car is a major financial decision, and understanding the details of your auto loan is the most critical step. This guide, combined with our professional-grade calculator, will empower you to navigate the financing process with confidence, saving you time and money.</p>
-
                     <h3>How to Use the Auto Loan Calculator</h3>
                     <p>Our calculator has two modes to answer the two most important questions in car buying:</p>
                     <ol>
                         <li><strong>Payment Calculator:</strong> If you have a specific car in mind, this mode calculates your monthly payment based on its price and your loan terms.</li>
                         <li><strong>Affordability Calculator:</strong> If you have a monthly budget, this mode works backward to show you the maximum vehicle price you can afford.</li>
                     </ol>
-
                     <h2>Beyond the Loan: Understanding the Total Cost of Ownership</h2>
                     <p>Your monthly loan payment is only one part of the cost of owning a car. To create a realistic budget, you must also account for these ongoing expenses:</p>
                     <ul>
@@ -129,7 +173,6 @@
                         <li><strong>Maintenance & Repairs:</strong> Budget for routine maintenance like oil changes and tires, as well as potential unexpected repairs, especially for used vehicles.</li>
                         <li><strong>Depreciation:</strong> While not a cash expense, your car's value decreases over time. A large down payment can help you stay "right-side up" on your loan (owing less than the car is worth).</li>
                     </ul>
-
                     <h2>Factors That Determine Your Auto Loan APR</h2>
                     <p>The APR you're offered has the biggest impact on your total cost. Lenders determine your rate based on several key factors:</p>
                     <ul>
@@ -138,14 +181,12 @@
                         <li><strong>Vehicle Age:</strong> New cars typically qualify for the lowest interest rates. Used car loans often have slightly higher APRs.</li>
                         <li><strong>Down Payment:</strong> A larger down payment reduces the lender's risk, which can sometimes help you qualify for a better rate.</li>
                     </ul>
-
                     <h3>The Power of Pre-Approval</h3>
-                    <p>One of the best strategies in car buying is to get **pre-approved for a loan** from your own bank or credit union before visiting a dealership. A pre-approval letter defines your maximum loan amount and APR. This gives you two major advantages:</p>
+                    <p>One of the best strategies in car buying is to get <strong>pre-approved for a loan</strong> from your own bank or credit union before visiting a dealership. A pre-approval letter defines your maximum loan amount and APR. This gives you two major advantages:</p>
                     <ol>
                         <li>It sets a firm budget, preventing you from overspending.</li>
                         <li>It gives you powerful negotiating leverage. You can ask the dealership to beat your pre-approved rate. If they can't, you already have your financing secured.</li>
                     </ol>
-
                     <h2>Decoding the Dealership: Common Terms</h2>
                     <ul>
                         <li><strong>MSRP:</strong> Manufacturer's Suggested Retail Price. The "sticker price" set by the carmaker.</li>
@@ -153,7 +194,6 @@
                         <li><strong>GAP Insurance:</strong> Guaranteed Asset Protection. This optional insurance covers the "gap" between what you owe on your loan and what the car is worth if it's totaled in an accident.</li>
                         <li><strong>Extended Warranty:</strong> An optional service contract that covers certain repairs after the manufacturer's warranty expires.</li>
                     </ul>
-
                     <div class="e-e-a-t-box">
                         <p class="font-semibold">Data Source and Methodology</p>
                         <p>This calculator provides professional-grade estimates based on standard financial mathematics. Our calculations follow the established amortization formulas used by banks and credit unions and are informed by guidance from authoritative sources like the <strong>Federal Trade Commission (FTC)</strong> and the <strong>Consumer Financial Protection Bureau (CFPB)</strong> on transparent lending practices.</p>
@@ -172,6 +212,8 @@
     <script>
     document.addEventListener('DOMContentLoaded', () => {
         const elements = {
+            mobileMenuToggle: document.getElementById('mobile-menu-toggle'),
+            mobileMenu: document.getElementById('mobile-menu'),
             modePayment: document.getElementById('modePayment'), modeAffordability: document.getElementById('modeAffordability'),
             vehiclePriceInput: document.getElementById('vehiclePriceInput'), monthlyPaymentInput: document.getElementById('monthlyPaymentInput'),
             vehiclePrice: document.getElementById('vehiclePrice'), tradeInValue: document.getElementById('tradeInValue'),
@@ -275,7 +317,6 @@
             const monthlyRate = i.apr / 12;
             const amountFinanced = monthlyRate > 0 ? (i.monthlyPayment * (Math.pow(1 + monthlyRate, i.termMonths) - 1)) / (monthlyRate * Math.pow(1 + monthlyRate, i.termMonths)) : i.monthlyPayment * i.termMonths;
             
-            // P = VP - DP - TI + F + TR * (VP - TI) --> VP = (P + DP + TI - F + TR*TI) / (1 + TR)
             const affordablePrice = (amountFinanced + i.downPaymentAmount + i.tradeInValue - i.fees + i.salesTaxRate * i.tradeInValue) / (1 + i.salesTaxRate);
 
             const taxableAmount = Math.max(0, affordablePrice - i.tradeInValue);
@@ -317,6 +358,9 @@
         }
 
         function setupEventListeners() {
+            elements.mobileMenuToggle.addEventListener('click', () => {
+                elements.mobileMenu.classList.toggle('hidden');
+            });
             elements.modePayment.addEventListener('click', () => setMode('payment'));
             elements.modeAffordability.addEventListener('click', () => setMode('affordability'));
             const allInputs = document.querySelectorAll('#calculator-ui input, #calculator-ui select');
