--- a/finance.html
+++ b/finance.html
@@ -72,7 +72,7 @@
                                     <h3 class="font-semibold text-gray-800">Loan Amortization Schedule Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate loan amortization schedule calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="loan-payoff-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="loan-payoff.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -442,7 +442,7 @@
 
                             <li><a href="mortgage-payment-calculator.html" class="text-blue-600 hover:underline">Mortgage Payment Calculator</a></li>
                             <li><a href="auto-loan-calculator.html" class="text-blue-600 hover:underline">Auto Loan Calculator</a></li>
-                            <li><a href="loan-payoff-calculator.html" class="text-blue-600 hover:underline">Loan Payoff Calculator</a></li>
+                            <li><a href="loan-payoff.html" class="text-blue-600 hover:underline">Loan Payoff Calculator</a></li>
                             <li><a href="house-affordability-calculator.html" class="text-blue-600 hover:underline">House Affordability Calculator</a></li>
                         </ul>
                     </div>
