--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </div>
                 </a>
 
-                <a href="loan-payoff-calculator.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
+                <a href="loan-payoff.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
                     <div class="bg-red-100 p-3 rounded-full">
                         <svg class="w-6 h-6 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                     </div>
