house affordability fix2

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     </div>
                 </a>
 
-                <a href="house-affordability-calculator.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
+                <a href="house-affordability.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
                     <div class="bg-yellow-100 p-3 rounded-full">
                         <svg class="w-6 h-6 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z"></path></svg>
                     </div>
@@ -547,7 +547,7 @@
                         <li><a href="percentage-calculator.html" class="text-gray-400 hover:text-white">Percentage Calculator</a></li>
                         <li><a href="bmi-calculator.html" class="text-gray-400 hover:text-white">BMI Calculator</a></li>
                         <li><a href="auto-loan-calculator.html" class="text-gray-400 hover:text-white">Auto Loan Calculator</a></li>
-                        <li><a href="house-affordability-calculator.html" class="text-gray-400 hover:text-white">House Affordability</a></li>
+                        <li><a href="house-affordability.html" class="text-gray-400 hover:text-white">House Affordability</a></li>
                     </ul>
                 </div>
                 <div>
