https://calcdomain.com/mortgage-payment-calculator.html

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <p class="text-lg text-gray-600">Get started with these frequently used tools</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <a href="mortgage-payment-calculator.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
+                <a href="mortgage-payment.html" class="card-hover bg-white p-6 rounded-lg shadow-md border flex items-start gap-4">
                     <div class="bg-blue-100 p-3 rounded-full">
                         <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
                     </div>
@@ -543,7 +543,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Popular Tools</h4>
                     <ul class="space-y-2">
-                        <li><a href="mortgage-payment-calculator.html" class="text-gray-400 hover:text-white">Mortgage Calculator</a></li>
+                        <li><a href="mortgage-payment.html" class="text-gray-400 hover:text-white">Mortgage Calculator</a></li>
                         <li><a href="percentage-calculator.html" class="text-gray-400 hover:text-white">Percentage Calculator</a></li>
                         <li><a href="bmi-calculator.html" class="text-gray-400 hover:text-white">BMI Calculator</a></li>
                         <li><a href="auto-loan-calculator.html" class="text-gray-400 hover:text-white">Auto Loan Calculator</a></li>
