https://calcdomain.com/mortgage-payment-calculator.html2

--- a/mortgage-payment.html
+++ b/mortgage-payment.html
@@ -156,7 +156,7 @@
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-                    <a href="mortgages.html" class="hover:text-blue-600">Mortgages</a> &raquo;
+                    <a href="/subcategories/mortgage-real-estate.html" class="hover:text-blue-600">Mortgages</a> &raquo;
                     <span>Mortgage Payment Calculator</span>
                 </nav>
 
