https://calcdomain.com/mortgage-payment-calculator.html4

--- a/subcategories/mortgage-real-estate.html
+++ b/subcategories/mortgage-real-estate.html
@@ -53,7 +53,7 @@
                 <!-- Calculators Grid -->
                 <section>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                            <a href="mortgage-payment.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            <a href="https://calcdomain.com/mortgage-payment.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -61,7 +61,7 @@
                                     <h3 class="font-semibold text-gray-800">Mortgage Payment Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate mortgage payment calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="mortgage-affordability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/mortgage-affordability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -69,7 +69,7 @@
                                     <h3 class="font-semibold text-gray-800">Mortgage Affordability Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate mortgage affordability calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="house-affordability.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/house-affordability.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -77,7 +77,7 @@
                                     <h3 class="font-semibold text-gray-800">House Affordability Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate house affordability calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="down-payment-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/down-payment-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -85,7 +85,7 @@
                                     <h3 class="font-semibold text-gray-800">Down Payment Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate down payment calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="closing-cost-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/closing-cost-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -93,7 +93,7 @@
                                     <h3 class="font-semibold text-gray-800">Closing Cost Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate closing cost calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="pmi-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/pmi-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -101,7 +101,7 @@
                                     <h3 class="font-semibold text-gray-800">PMI Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate pmi calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="rent-vs-buy-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/rent-vs-buy-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -109,7 +109,7 @@
                                     <h3 class="font-semibold text-gray-800">Rent vs Buy Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate rent vs buy calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="property-tax-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/property-tax-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -117,7 +117,7 @@
                                     <h3 class="font-semibold text-gray-800">Property Tax Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate property tax calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="home-value-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/home-value-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -125,7 +125,7 @@
                                     <h3 class="font-semibold text-gray-800">Home Value Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate home value calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="equity-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/equity-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -133,7 +133,7 @@
                                     <h3 class="font-semibold text-gray-800">Home Equity Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate home equity calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="cash-out-refinance-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/cash-out-refinance-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -141,7 +141,7 @@
                                     <h3 class="font-semibold text-gray-800">Cash-Out Refinance Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate cash-out refinance calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="arm-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/arm-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -149,7 +149,7 @@
                                     <h3 class="font-semibold text-gray-800">ARM Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate arm calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="fha-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/fha-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -157,7 +157,7 @@
                                     <h3 class="font-semibold text-gray-800">FHA Loan Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate fha loan calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="va-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/va-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -165,7 +165,7 @@
                                     <h3 class="font-semibold text-gray-800">VA Loan Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate va loan calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="jumbo-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/jumbo-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -173,7 +173,7 @@
                                     <h3 class="font-semibold text-gray-800">Jumbo Loan Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate jumbo loan calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="investment-property-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/investment-property-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
