--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -150,7 +150,7 @@
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="math.html" class="hover:text-blue-600">Math</a> &raquo;
+                    <a href="math-conversions.html" class="hover:text-blue-600">Math</a> &raquo;
                     <a href="basic-arithmetic.html" class="hover:text-blue-600">Basic Arithmetic</a> &raquo;
                     <span>Percentage Calculator</span>
                 </nav>
