--- a/percentage-calculator.html
+++ b/percentage-calculator.html
@@ -151,7 +151,7 @@
                 <nav class="text-sm mb-4 text-gray-600">
                     <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
                     <a href="https://calcdomain.com/math-conversions.html" class="hover:text-blue-600">Math</a> &raquo;
-                    <a href="https://calcdomain.com/subcategories/core-math-algebra.html" class="hover:text-blue-600">Basic Arithmetic</a> &raquo;
+                    <a href="https://calcdomain.com/subcategories/core-math-algebra.html" class="hover:text-blue-600">Core Math & Algebra</a> &raquo;
                     <span>Percentage Calculator</span>
                 </nav>
 
