--- a/fha-loan.html
+++ b/fha-loan.html
@@ -9,7 +9,15 @@
   <meta name="theme-color" content="#005A9C" />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <link rel="canonical" href="https://www.calcdomain.com/fha-loan.html" />
-
+<style>
+  /* FHA quick polish */
+  .calculator-layout{ align-items:flex-start }       /* align cards to top */
+  .results{ min-height:auto; padding-top:.75rem }    /* remove forced tall box */
+  #content .formula-box code{ white-space:pre-wrap } /* avoid horizontal scroll for formulas */
+  @media (min-width:992px){
+    h1{ margin-bottom:.5rem }
+  }
+</style>
   <style>
     /* ==== Design tokens ==== */
     :root{
